# broad_and_narrow

./: .gitignore  README.md  all_commands.sh  demo.ipynb  eval.py  eval_pipe.py  experiments.ipynb  fit_k.py  ft_grpo.py  ft_lora.py  generate_eval_scripts.py  generate_scripts.py  generate_train_scripts.py  infer.py  output.txt  pyproject.toml  requirements.txt  results0.txt  sample_pipe.py  test.ipynb  ucct.py
arithmetic/: eval.py  query.py  query_.py  sample.py
ft_data/: data_ft_10.txt  data_ft_10_2.txt  data_ft_10_23.txt  data_ft_10_234.txt  data_ft_10_3.txt  data_ft_10_4.txt  data_ft_11.txt  data_ft_1110_2.txt  data_ft_11_2.txt  data_ft_11_23.txt  data_ft_11_234.txt  data_ft_11_3.txt  data_ft_11_4.txt  data_ft_8.txt  data_ft_810_2.txt  data_ft_811_2.txt  data_ft_8911_2.txt  data_ft_89_2.txt  data_ft_8_2.txt  data_ft_8_23.txt  data_ft_8_234.txt  data_ft_8_3.txt  data_ft_8_4.txt  data_ft_9.txt  data_ft_910_2.txt  data_ft_911_2.txt  data_ft_9_2.txt  data_ft_9_23.txt  data_ft_9_234.txt  data_ft_9_3.txt  data_ft_9_4.txt
ft_data/.ipynb_checkpoints/: data_ft_8_2-checkpoint.txt
unsloth_compiled_cache/: UnslothAlignPropTrainer.py  UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDDPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothIterativeSFTTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py
