[project]
name = "broad-and-narrow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "datasets>=3.6.0",
    "ipykernel>=6.29.5",
    "numpy>=2.3.1",
    "openai>=1.93.0",
    "pathlib>=1.0.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.0",
    "trl>=0.19.0",
    "unsloth>=2025.6.9",
]
